Fixed sidebar toggling on mobile

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,18 @@
+amadeus-conversation {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0%;
+    overflow-y: scroll;
+}
+
+amadeus-message-container-header {
+    width: 100%;
+}
+
+amadeus-response-area {
+    width: 100%;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -15,17 +30,9 @@
     height: 100%;
 }
 
-amadeus-conversation {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 0%;
-    overflow-y: scroll;
-}
-
-amadeus-message-container-header {
-    width: 100%;
-}
-
-amadeus-response-area {
-    width: 100%;
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 420px) {
+    amadeus-sidebar.hide {
+        display: none;
+    }
 }
