--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -16,23 +16,3 @@
     height: 100%;
     overflow-y: scroll;
 }
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 420px) {
-    :host, .bar {
-        display: none;
-        width: 0;
-    }
-
-    :host.show-mobile {
-        height: 100%;
-        display: block;
-        position: absolute;
-        width: 100%;
-        z-index: 100;
-    }
-
-    :host.show-mobile .bar {
-        display: block;
-    }
-}
